# ffxiv-asset-extraction-tool

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
asset-extraction-tool/: Cargo.toml
asset-extraction-tool/src/: icons.rs  main.rs  maps.rs
boilmaster-re-exports/: Cargo.toml
boilmaster-re-exports/bm_data_replacement/: Cargo.toml
boilmaster-re-exports/bm_data_replacement/src/: lib.rs
boilmaster-re-exports/bm_version_replacement/: Cargo.toml
boilmaster-re-exports/bm_version_replacement/src/: lib.rs
boilmaster-re-exports/src/: asset.rs
