[workspace]
members = [
    "asset-extraction-tool",
	"boilmaster-re-exports",
]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.lints]
clippy.pedantic = "warn"

[workspace.dependencies]
boilmaster-re-exports = { path = "./boilmaster-re-exports"}

anyhow = { version = "1.0" }
ironworks = { version = "0.4.1", git = "https://github.com/ackwell/ironworks" }

[profile.release]
opt-level = 3
lto = true
panic = "abort"
