[workspace]
members = [
    "asset-extraction-tool",
	"boilmaster-re-exports",
	"boilmaster-re-exports/bm_data_replacement",
	"boilmaster-re-exports/bm_version_replacement",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "AGPL-3.0-or-later"

[workspace.lints]
clippy.pedantic = "warn"

[workspace.dependencies]
boilmaster-re-exports = { path = "./boilmaster-re-exports" }
bm_data = { path = "./boilmaster-re-exports/bm_data_replacement" }
bm_version = { path = "./boilmaster-re-exports/bm_version_replacement" }

anyhow = { version = "1.0" }
ironworks = { version = "0.4.1", git = "https://github.com/ackwell/ironworks" }
tracing = { version = "0.1" }

[profile.release]
opt-level = 3
lto = true
panic = "abort"
