[package]
name = "ffxiv-asset-extraction-tool"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
boilmaster-re-exports = { workspace = true }

anyhow = { workspace = true }
binrw = { version = "0.15" }
clap = { version = "4.6", features = ["derive"] }
ironworks = { workspace = true, features = ["sqpack"] }
