[package]
name = "ffxiv-asset-extraction-tool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
boilmaster-re-exports = { workspace = true }
bm_data = { workspace = true }
bm_version = { workspace = true }

scree = {workspace = true }

anyhow = { workspace = true }
binrw = { version = "0.15" }
clap = { version = "4.6", features = ["derive"] }
ironworks = { workspace = true, features = ["sqpack", "excel"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
